changed lowercasing of table names in code to PascalCasing in order to mirror how those tables are defined in MySQL - fixed the AWS RDS problem